--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Hero from '../components/sections/Hero.astro';
-import Resume from '../components/sections/Resume.astro';
-import Portfolio from '../components/sections/portfolio/Portfolio.astro';
+import Layout from "../layouts/Layout.astro";
+import Hero from "../components/sections/Hero.astro";
+import Resume from "../components/sections/Resume.astro";
+import Projects from "../components/sections/portfolio/Projects.astro";
 ---
 
 <Layout title="Astro Resume Theme">
-	<Hero />
-	<Resume />
-	<Portfolio />
+  <Hero />
+  <Projects />
+  <Resume />
 </Layout>
