--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -41,6 +41,17 @@ import { basic } from "../../config/cv.json";
           >
             Download CV
           </a> -->
+          <button
+            type="button"
+            title="Download CV"
+            class="text-white bg-gradient-to-r from-purple-500 via-purple-600 to-purple-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-purple-300 dark:focus:ring-purple-800 shadow-lg shadow-purple-500/50 dark:shadow-lg dark:shadow-purple-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
+            >Download CV</button
+          >
+          <button
+            type="button"
+            class="text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 shadow-lg shadow-cyan-500/50 dark:shadow-lg dark:shadow-cyan-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
+            >Cyan</button
+          >
         </div>
       </div>
     </div>
