--- a/src/components/sections/portfolio/Projects.astro
+++ b/src/components/sections/portfolio/Projects.astro
@@ -49,23 +49,44 @@ const PROJECTS = [
     image: "/projects/proyecto2.webp",
     tags: [TAGS.Html, TAGS.Css, TAGS.Js],
   },
+  {
+    title: "Aplicacion del Clima",
+    description:
+      "Pagina creada con el objetivo de usar API del clima y probar su funcionamiento. Se utilizo Html, Css y JS",
+    link: "#",
+    github: "https://github.com/Pietro923/api-del-clima",
+    image: "/projects/proyecto2.webp",
+    tags: [TAGS.Html, TAGS.Css, TAGS.Js],
+  },
+  {
+    title: "Aplicacion del Clima",
+    description:
+      "Pagina creada con el objetivo de usar API del clima y probar su funcionamiento. Se utilizo Html, Css y JS",
+    link: "#",
+    github: "https://github.com/Pietro923/api-del-clima",
+    image: "/projects/proyecto2.webp",
+    tags: [TAGS.Html, TAGS.Css, TAGS.Js],
+  },
 ];
 ---
 
-<section id="portfolio" class="w-full mx-auto border-2 max-w-7xl py-36">
+<section id="portfolio" class="w-full mx-auto max-w-7xl py-36">
   <h1 class="text-3xl font-semibold text-center capitalize lg:text-4xl">
     Portfolio
   </h1>
-  <div class="flex flex-col gap-y-16 mt-8 xl:mt-12">
+  <div
+    class="flex flex-col flex-wrap gap-y-16 mx-8 lg:justify-between lg:flex-row mt-8 xl:mt-12"
+  >
     {
       PROJECTS.map(({ image, title, description, tags, link, github }) => (
-        <article class="flex flex-col md:flex-row md:space-x-8 space-y-8 md:space-y-0">
+        <article class="w-fit flex flex-col m-x-auto lg:mx-auto lg:flex-row lg:space-x-8 space-y-8 lg:space-y-0">
           <a
             href="#"
-            class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow-sm md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700"
+            class="flex flex-col items-center
+             bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700"
           >
             <img
-              class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
+              class="object-cover w-full rounded-t-lg h-96"
               src={image}
               alt=""
             />
