--- a/src/components/sections/portfolio/Projects.astro
+++ b/src/components/sections/portfolio/Projects.astro
@@ -74,24 +74,22 @@ const PROJECTS = [
   <h1 class="text-3xl font-semibold text-center capitalize lg:text-4xl">
     Portfolio
   </h1>
-  <div
-    class="flex flex-col flex-wrap gap-y-16 mx-8 items-stretch
-    lg:justify-between lg:flex-row mt-8 xl:mt-12"
-  >
+  <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mx-8 mt-8 xl:mt-12">
     {
       PROJECTS.map(({ image, title, description, tags, link, github }) => (
-        <article class="w-fit lg:w-[48%] flex flex-col lg:h-full lg:flex-row space-y-8 lg:space-y-0">
+        <article class="flex flex-col h-full">
           <a
             href="#"
-            class="flex flex-col items-center lg:h-full
-             bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700"
+            class="flex flex-col h-full
+          items-center bg-white border border-gray-200 rounded-lg shadow-sm
+          hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700"
           >
             <img
               class="object-cover w-full rounded-t-lg h-96"
               src={image}
               alt=""
             />
-            <div class="flex flex-col justify-between p-4 leading-normal flex-grow lg:h-full">
+            <div class="flex flex-col justify-between p-4 leading-normal flex-grow">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                 {title}
               </h5>
