--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -29,29 +29,51 @@ import { basic } from "../../config/cv.json";
           {basic?.summary}
         </p>
 
-        <div class="mt-10 sm:flex sm:items-center sm:space-x-8">
-          <!-- <a
-            href=`/cv/${basic?.cv_file_name}`
+        <div class="mt-10 flex gap-4 flex-wrap">
+          <a
+            href={`/cv/${basic?.cv_file_name}`}
             title="Download CV"
             download
-            class="inline-flex items-center justify-center px-10 py-4 text-base text-white
-                            font-semibold transition-all duration-200 rounded
-                            bg-primary hover:bg-secondary focus:bg-secondary"
             role="button"
+            class="relative isolate overflow-hidden text-white bg-primary hover:bg-secondary focus:ring-4 focus:outline-none focus:ring-border shadow-md font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:shadow-xl"
           >
-            Download CV
-          </a> -->
-          <button
-            type="button"
-            title="Download CV"
-            class="text-white bg-gradient-to-r from-purple-500 via-purple-600 to-purple-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-purple-300 dark:focus:ring-purple-800 shadow-lg shadow-purple-500/50 dark:shadow-lg dark:shadow-purple-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
-            >Download CV</button
+            <span class="relative z-10">Download CV</span>
+            <span
+              class="absolute inset-0 z-0 bg-white/20 blur-md opacity-0 hover:opacity-100 transition-opacity duration-500 pointer-events-none"
+            ></span>
+          </a>
+          <a
+            href={basic.linkedin}
+            target="_blank"
+            rel="noopener noreferrer"
+            role="button"
+            class="relative isolate overflow-hidden text-white bg-primary hover:bg-secondary focus:ring-4 focus:outline-none focus:ring-border shadow-md font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:shadow-xl"
           >
-          <button
-            type="button"
-            class="text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 shadow-lg shadow-cyan-500/50 dark:shadow-lg dark:shadow-cyan-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
-            >Cyan</button
+            <span class="relative z-10">LinkedIn</span><span
+              class="absolute inset-0 z-0 bg-white/20 blur-md opacity-0 hover:opacity-100 transition-opacity duration-500 pointer-events-none"
+            ></span>
+          </a>
+          <a
+            href="https://github.com/MonicaPerdomoSantana"
+            target="_blank"
+            rel="noopener noreferrer"
+            role="button"
+            class="relative isolate overflow-hidden text-white bg-primary hover:bg-secondary focus:ring-4 focus:outline-none focus:ring-border shadow-md font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:shadow-xl"
           >
+            <span class="relative z-10">GitHub</span><span
+              class="absolute inset-0 z-0 bg-white/20 blur-md opacity-0 hover:opacity-100 transition-opacity duration-500 pointer-events-none"
+            ></span>
+          </a>
+          <a
+            href="mailto:tuemail@ejemplo.com"
+            role="button"
+            class="relative isolate overflow-hidden text-white bg-primary hover:bg-secondary focus:ring-4 focus:outline-none focus:ring-border shadow-md font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:shadow-xl"
+          >
+            <span class="relative z-10"> Contact me! </span>
+            <span
+              class="absolute inset-0 z-0 bg-white/20 blur-md opacity-0 hover:opacity-100 transition-opacity duration-500 pointer-events-none"
+            ></span>
+          </a>
         </div>
       </div>
     </div>
