--- a/src/components/sections/portfolio/CardListItem.astro
+++ b/src/components/sections/portfolio/CardListItem.astro
@@ -2,13 +2,17 @@
 const { title, sub_title, years, details } = Astro.props;
 ---
 
-<li class="p-5 bg-background-offset shadow-lg rounded-xl border border-default">
+<li
+  class="p-5 bg-offset shadow-lg rounded-xl border border-default hover:bg-start transition-all duration-300 ease-in-out hover:shadow-lg hover:-translate-y-1 hover:border-primary"
+>
   <div class="flex flex-col sm:flex-row justify-between items-start">
     <div class="mb-4 sm:mb-0">
-      <h3 class="text-2xl font-semibold">{title}</h3>
-      <p class="text-lg font-medium text-secondary pt-2">{sub_title}</p>
+      <h3 class="text-3xl font-semibold">{title}</h3>
+      <p class="text-xl font-medium text-secondary pt-2">{sub_title}</p>
     </div>
-    <p class="text-sm text-offset sm:text-right whitespace-nowrap">{years}</p>
+    <p class="text-default sm:text-right whitespace-nowrap">
+      {years}
+    </p>
   </div>
-  <p class="mt-4 text-offset leading-relaxed">{details}</p>
+  <p class="mt-4 text-default text-lg leading-relaxed">{details}</p>
 </li>
