--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,8 +48,14 @@ const { title } = Astro.props;
     </script>
   </head>
   <body
-    class="h-full flex flex-col overflow-x-hidden bg-default
+    class="h-full flex flex-col overflow-x-hidden
 		text-default text-base selection:bg-secondary"
+    style="
+      background-image: linear-gradient(to bottom, var(--color-body-background-start), var(--color-body-background-end));
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      background-position: center;"
   >
     <Header />
     <section class="flex-grow">
