--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -6,6 +6,8 @@
     --color-background: theme("colors.gray.50");
     --color-background-offset: theme("colors.gray.100");
     --color-border: theme("colors.gray.900" / 10%);
+    --color-body-background-start: #fff; 
+    --color-body-background-end: #fffcf2;    
 }
 
 [data-theme="dark"] {
@@ -16,4 +18,6 @@
     --color-background: theme("colors.gray.900");
     --color-background-offset: theme("colors.gray.800");
     --color-border: theme("colors.gray.50" / 10%);
+    --color-body-background-start: #0f172a;
+    --color-body-background-end: #1e293b;  
 }
