--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -65,7 +65,7 @@ import { basic } from "../../config/cv.json";
             ></span>
           </a>
           <a
-            href="mailto:tuemail@ejemplo.com"
+            href="mailto:moni320097@gmail.com"
             role="button"
             class="relative isolate overflow-hidden text-white bg-primary hover:bg-secondary focus:ring-4 focus:outline-none focus:ring-border shadow-md font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:shadow-xl"
           >
