--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,7 +48,7 @@ const { title } = Astro.props;
     </script>
   </head>
   <body
-    class="h-full flex flex-col overflow-x-hidden
+    class="h-full flex flex-col overflow-x-hidden overflow-y-scroll
 		text-default text-base selection:bg-secondary"
     style="
       background-image: linear-gradient(to bottom, var(--color-body-background-start), var(--color-body-background-end));
