--- a/src/components/sections/portfolio/projects/TrelloProject.astro
+++ b/src/components/sections/portfolio/projects/TrelloProject.astro
@@ -80,7 +80,7 @@
       <span>GitHub repository</span>
     </a>
     <a
-      href="https://www.postman.com/mapaxito/monica-perdomo-public-ws/collection/811uiic/monica-perdomo-trello-api-happy-path"
+      href="https://www.postman.com/mapaxito/monica-perdomo-public-ws/request/asni4p8/create-board?tab=scripts"
       target="_blank"
       class="px-4 py-2 text-center rounded bg-secondary text-white hover:opacity-90 transition"
     >
