--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -9,6 +9,8 @@
     --color-body-background-start: #fff; 
     --color-body-background-end: #fffcf2;
     --color-modal-background: #fff;
+    --color-link: theme("colors.blue.700");
+    --color-marking: theme("colors.yellow.700");    
 }
 
 [data-theme="dark"] {
@@ -21,5 +23,7 @@
     --color-border: theme("colors.gray.50" / 10%);
     --color-body-background-start: #0f172a;
     --color-body-background-end: #1e293b;  
-    --color-modal-background: theme("colors.zinc.800") ;
+    --color-modal-background: theme("colors.zinc.800");
+    --color-link: theme("colors.blue.500");
+    --color-marking: theme("colors.yellow.500");
 }
