--- a/src/components/sections/portfolio/Projects.astro
+++ b/src/components/sections/portfolio/Projects.astro
@@ -53,7 +53,7 @@ const PROJECTS = [
 ---
 
 <section id="portfolio" class="w-full mx-auto max-w-7xl py-36">
-  <h1 class="text-3xl lg:text-5xl font-semibold text-center capitalize">
+  <h1 class="text-3xl lg:text-5xl mx-8 font-semibold text-center capitalize">
     Experience & Projects
   </h1>
   <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mx-8 mt-8 xl:mt-12">
@@ -89,7 +89,7 @@ const PROJECTS = [
                 </span>
 
                 <div class="flex flex-wrap mt-2">
-                  <ul class="flex flex-row mb-2 gap-x-4">
+                  <ul class="flex flex-row flex-wrap gap-y-2 mb-2 gap-x-4">
                     {tags.map((tag) => (
                       <li>
                         <span
