--- a/src/components/sections/portfolio/Projects.astro
+++ b/src/components/sections/portfolio/Projects.astro
@@ -71,7 +71,7 @@ const PROJECTS = [
       border border-default hover:border-primary
       cursor-pointer"
             >
-              <div class="w-full h-96 overflow-hidden rounded-t-lg">
+              <div class="w-full aspect-[16/9] overflow-hidden rounded-t-lg">
                 <img
                   class="object-cover w-full h-full transition-transform duration-500 ease-in-out hover:scale-110"
                   src={image}
