--- a/src/components/sections/portfolio/projects/NextTaskProject.astro
+++ b/src/components/sections/portfolio/projects/NextTaskProject.astro
@@ -31,8 +31,8 @@
   </p>
 
   <p class="mb-4 text-default">
-    You can view the original app or download the full test documentation as a
-    PDF using the buttons below.
+    You can view the original app on the previous link or download the test
+    documentation as a PDF on the button below.
   </p>
 
   <div
