--- a/src/components/sections/portfolio/Projects.astro
+++ b/src/components/sections/portfolio/Projects.astro
@@ -93,7 +93,7 @@ const PROJECTS = [
                     {tags.map((tag) => (
                       <li>
                         <span
-                          class={`flex rounded-full text-s ${tag.class} py-1 px-3 font-bold transition-all duration-200 transform hover:scale-105 hover:shadow-md hover:ring-1 hover:ring-black/10 dark:hover:ring-white/10`}
+                          class={`flex rounded-full text-s py-1 px-3 font-bold tracking-wide transition-all duration-300 transform hover:scale-110 hover:shadow-xl hover:ring-4 hover:ring-white/60 dark:hover:ring-white/30 dark:shadow-[0_0_15px_3px_rgba(255,255,255,0.1)] ${tag.class}`}
                         >
                           {tag.name}
                         </span>
