--- a/src/components/sections/portfolio/Projects.astro
+++ b/src/components/sections/portfolio/Projects.astro
@@ -93,7 +93,11 @@ const PROJECTS = [
                     {tags.map((tag) => (
                       <li>
                         <span
-                          class={`flex rounded-full text-s py-1 px-3 font-bold tracking-wide transition-all duration-300 transform hover:scale-110 hover:shadow-xl hover:ring-4 hover:ring-white/60 dark:hover:ring-white/30 dark:shadow-[0_0_15px_3px_rgba(255,255,255,0.1)] ${tag.class}`}
+                          class={`relative flex items-center justify-center rounded-full px-4 py-2 text-sm font-bold uppercase tracking-wide transition-all duration-300 transform
+                                ${tag.class} 
+                                shadow-[inset_0_1px_1px_rgba(255,255,255,0.4),inset_0_-1px_1px_rgba(0,0,0,0.2)] 
+                                ring-1 ring-white/10
+                                hover:scale-110 hover:shadow-[0_2px_10px_rgba(255,255,255,0.3),inset_0_1px_1px_rgba(255,255,255,0.5)]`}
                         >
                           {tag.name}
                         </span>
